####### kdevelop will overwrite this part!!! (begin)##########


EXTRA_DIST = hi16-action-dequeue.png hi16-action-enqueue.png hi16-action-tag.png hi22-action-dequeue.png hi22-action-enqueue.png hi22-action-tag.png hi32-action-dequeue.png hi32-action-enqueue.png hi32-action-tag.png 

####### kdevelop will overwrite this part!!! (end)############

jukicondir = $(kde_datadir)/juk/icons
jukicon_ICON = AUTO
